Kompilowanie plików .svg do zasobów array.